--- a/example_theme/assets/_sass/utils/_helpers.scss
+++ b/example_theme/assets/_sass/utils/_helpers.scss
@@ -1,197 +1,6 @@
 // Helper Classes
 // ------------
 
-// 2 piece "border bottom" of selected headings
-.custom-underline {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    display: inline-block;
-    margin: 0;
-    position: relative;
-    &:before,
-    &:after {
-      @include position(absolute, $bottom: -5px);
-      content: "";
-      height: 3px;
-      background-color: $blue;
-      border-radius: $border-radius-small;
-    }
-  }
-  &.left {
-    text-align: left;
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      &:before {
-        left: 0;
-        width: 33%;
-      }
-      &:after {
-        left: 37%;
-        width: 15%;
-      }
-    }
-  }
-  &.center {
-    text-align: center;
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      &:before {
-        left: 25%;
-        width: 33%;
-      }
-      &:after {
-        right: 23%;
-        width: 15%;
-      }
-    }
-  }
-  &.fixed {
-    position: relative;
-    width: 106px;
-    &:before,
-    &:after {
-      content: "";
-      @include position(absolute, $bottom: -5px);
-      height: 5px;
-      background-color: $light-blue;
-      border-radius: $border-radius-small;
-    }
-    &:before {
-      left: 0;
-      width: 58%;
-    }
-    &:after {
-      right: 0;
-      width: 38%;
-    }
-  }
-}
-
-// Background color
-.bgc-white {
-  background-color: $white;
-}
-.bgc-light-grey {
-  background-color: $light-grey;
-}
-.bgc-section {
-  background-color: $section-color;
-}
-
-// Text color
-.white-text {
-  color: $white;
-}
-.grey-text {
-  color: $grey !important;
-}
-.dark-grey-text {
-  color: $dark-grey !important;
-}
-.darker-grey-text {
-  color: $darker-grey;
-}
-.darkish-grey-text {
-  color: $darkish-grey;
-}
 .blue-text {
-  color: $blue !important;
-}
-.light-blue-text {
-  color: $light-blue !important;
-}
-.hr-color {
-  color: $hr;
-}
-.para-color {
-  color: $paragraph;
-}
-// Font sizes
-.fs-12 {
-  font-size: 12px;
-}
-.fs-14 {
-  font-size: 14px;
-}
-.fs-15 {
-  font-size: 15px;
-}
-.fs-16 {
-  font-size: 16px;
-}
-.fs-18 {
-  font-size: 18px;
-}
-.fs-22 {
-  font-size: 22px;
-}
-.fs-24 {
-  font-size: 24px;
-}
-.fs-20 {
-  font-size: 20px;
-}
-.fs-32 {
-  font-size: 32px;
-}
-.fs-72 {
-  font-size: 72px;
-}
-
-// Line Heights
-.lh-12 {
-  line-height: 1.2 !important;
-}
-.lh-15 {
-  line-height: 1.5 !important;
-}
-.lh-16 {
-  line-height: 1.6 !important;
-}
-.lh-18 {
-  line-height: 1.8 !important;
-}
-.lh-19 {
-  line-height: 1.9 !important;
-}
-
-// Font Weights
-.fw-300 {
-  font-weight: 300;
-}
-.fw-500 {
-  font-weight: 500;
-}
-.fw-b {
-  font-weight: bold;
-}
-
-// Letter spacing
-.ls--01 {
-  letter-spacing: -0.01em;
-}
-.ls--02 {
-  letter-spacing: -0.02em;
-}
-
-// Text Decoration
-.td-n {
-  text-decoration: none !important;
-}
-
-// Text Transform
-.ttr-up {
-  text-transform: uppercase;
+  color: $blue;
 }
