--- a/example_theme/style.css
+++ b/example_theme/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Ving DOO
-Description: Custom theme developed for ving.co.rs
-Version: 1.20
+Theme Name: Example Theme
+Author: Lyra Belacqua
+Description: Insert your description
+Version: 1.0
 Licence: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Author: Milorad and Luka
-Author URI: https://luka-bacic.com
+Text Domain: someuniquetextdomain
 */
