--- a/example_theme/prototype/_sass/theme-style.scss
+++ b/example_theme/prototype/_sass/theme-style.scss
@@ -1,10 +1,11 @@
-/*
- * This file usually just imports
- * all the other scss partials.
- * Take a look at the 7-1 pattern:
- * https://sass-guidelin.es/#the-7-1-pattern
- *
-**/
+////
+//
+// This file usually just imports
+// all the other scss partials.
+// Take a look at the 7-1 pattern:
+// https://sass-guidelin.es/#the-7-1-pattern
+//
+////
 
 @import 'utils/global'; // You want to import this first, so you can use variables and mixins in other files
 @import 'base/global';
