update docs and files

--- a/example_theme/prototype/_css/theme-style.css
+++ b/example_theme/prototype/_css/theme-style.css
@@ -1,1 +1,1 @@
-body{font-family:sans-serif}figure img{display:block;margin:0 auto;border-radius:4px}figure figcaption{text-align:center}body{min-height:100vh}#figure{margin-top:50px}.bg-image{margin:0 auto;background:url("../images/komodo.jpg");width:640px;height:426px;border-radius:4px}
+body{font-family:sans-serif}figure img{display:block;margin:0 auto;border-radius:4px}figure figcaption{text-align:center}body{min-height:100vh}.bg-image{margin:0 auto;background:url("../images/komodo.jpg");width:640px;height:426px;border-radius:4px}
